--- a/css/find.css
+++ b/css/find.css
@@ -1,6 +1,10 @@
+.find {
+  margin-top: 50px;
+}
+
 .find .find__header-list {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 .find .header-btn {
   display: flex;
@@ -10,4 +14,24 @@
 
 .find .header-btn__title {
   display: block;
+}
+
+.find .header-btn__title {
+  margin-top: 20px;
+  font-size: 14px;
+}
+.find .header-btn__icon {
+  font-size: 12px;
+}
+
+.find .find__recommended {
+  margin-top: 30px;
+  padding-top: 15px;
+  border-top: 1px solid #f7f7f7;
+}
+
+.find .find__title {
+  font-size: 12px;
+  opacity: 0.7;
+  margin-bottom: 20px;
 }
