--- a/css/chat.css
+++ b/css/chat.css
@@ -67,8 +67,9 @@
 }
 .message {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   width: 50%;
+  margin-bottom: 20px;
 }
 .message .message__content {
   width: 80%;
@@ -83,7 +84,7 @@
 .incoming-message img {
   width: 30px;
   border-radius: 15px;
-  margin-right: 20px;
+  margin-right: 15px;
 }
 .message .message__bubble {
   background-color: white;
@@ -91,4 +92,24 @@
     rgba(0, 0, 0, 0.024) 0px -6px 16px -6px;
   padding: 10px 20px;
   border-radius: 30px;
+  font-weight: 600;
+  display: block;
+}
+
+.incoming-message .message__author {
+  margin-top: 15px;
+  display: block;
+  font-weight: 600;
+  font-size: 12px;
+}
+
+.incoming-message .message__bubble {
+  border-bottom-left-radius: 0px;
+  color: white;
+  background-image: linear-gradient(#41295a, #2f0743);
+}
+
+.sent-message .message__bubble {
+  border-bottom-right-radius: 0px;
+  background-image: linear-gradient(to left, #2980b9, #6dd5fa, #ffffff);
 }
