--- a/fixbug/chat.css
+++ b/fixbug/chat.css
@@ -130,6 +130,7 @@
   align-items: flex-start;
   margin-bottom: 20px;
 }
+
 .incoming-message {
   align-self: flex-start;
 }
@@ -178,12 +179,12 @@
 
 .incoming-message .message__bubble {
   border-bottom-left-radius: 0px;
-  background-image: linear-gradient(#41295a, #2f0743);
+  background-image: linear-gradient(to right, #7b4397, #dc2430);
 }
 
 .sent-message .message__bubble {
   border-bottom-right-radius: 0px;
-  background-image: linear-gradient(to left, #2980b9, #6dd5fa, #ffffff);
+  background-image: linear-gradient(to left, #00c6ff, #0072ff);
 }
 
 @keyframes incomingAnim {
