--- a/fixbug/nav.css
+++ b/fixbug/nav.css
@@ -30,7 +30,6 @@
   background-color: #dc5d46;
   width: 18px;
   height: 18px;
-  text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -47,7 +46,7 @@
 }
 
 .nav {
-  transform: translateX(80px);
+  transform: translateY(80px);
   animation: showNavBar 0.5s ease-out forwards;
-  animation-delay: 1s;
+  animation-delay: 0.5s;
 }
