--- a/fixbug/styles.css
+++ b/fixbug/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300:400,600&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300:400,600");
 @import "reset.css";
 @import "status-bar.css";
 @import "header.css";
@@ -9,7 +9,7 @@
 @import "more.css";
 @import "settings.css";
 @import "chat.css";
-@import "mobile.css";
+
 * {
   box-sizing: border-box;
 }
@@ -19,8 +19,7 @@ body {
   padding: 10px 20px;
   color: #020202;
   font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  height: 100%;
+    Roboto, Oxygen, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
 a {
@@ -38,6 +37,7 @@ a {
     transform: none;
   }
 }
+
 main {
   animation: fadeIn 0.5s ease-in-out;
 }
